# template_autopoiesis

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  IMPROVEMENTS.md  ISA.md  README.md  SPEC.md  STANDALONE.md  SYNTAX.md  TODO.md  codemeta.json  coverage_project.json  domain_profile.yaml  experiment_plan.yaml  pyproject.toml
.agents/: AGENTS.md
data/: AGENTS.md  README.md  claim_ledger.yaml
manuscript/: 00_abstract.md  01_introduction.md  02_methods.md  03_results.md  04_honesty.md  05_reproducibility.md  06_limitations.md  AGENTS.md  README.md  config.yaml  config.yaml.example  references.bib
scripts/: 01_generate_manuscript_assets.py  02_measure_test_coverage.py  04_seal.py  AGENTS.md  README.md  autopoiesis.py  generate_cover_art.py  realize_archetypes.py  realize_child_full.py  seal_child.py  z_generate_manuscript_variables.py
src/: AGENTS.md  README.md  __init__.py  cli.py  common.py  cover_art.py  emit_templates.py  expand.py  figures.py  grammar.py  honesty.py  integrity.py  manuscript_figures.py  manuscript_variables.py  materialize.py  project_paths.py  realize.py  sealing.py  verify.py
tests/: AGENTS.md  README.md  conftest.py  test_cli.py  test_common.py  test_cover_art.py  test_deps_vendoring.py  test_emit_templates.py  test_figures.py  test_grammar_and_expand.py  test_honesty.py  test_integrity_and_verify.py  test_manuscript_assets_script.py  test_manuscript_figures.py  test_manuscript_mermaid.py  test_manuscript_variables.py  test_materialize.py  test_meta_teeth.py  test_primitives_dynamics.py  test_primitives_graph.py  (+11 more)
(+166 files in other folders)
